cmake_minimum_required(VERSION 3.4)

project(CCI)

add_subdirectory("1.Arrays&Strings")
add_subdirectory("2.Linked Lists")
add_subdirectory("3.Stacks&Queues")
add_subdirectory("4.Trees&Graphs")
add_subdirectory("5.Bit Manipulation")
add_subdirectory("6.Math&Logic Puzzles")
add_subdirectory("7.Object-Oriented Design")
add_subdirectory("8.Recursuion&Dynamic Programming")
